--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <form>
 <h1 style="text-align:center;"> Welcome</h1>
-<h1 style="text-align:center;"> Paytm recharge ticket book</h1>
+<h1 style="text-align:center;"> Paytm DTH ticket book</h1>
 </form>
