--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .input-field:focus {
-  border: 2px solid dodgerblue;
+  border: 2px solid rgb(30, 255, 113);
 }
 
 /* Set a style for the submit button */
